# Portfolio-Optimization

./: README.md
diworsification-lab/: README.md  pyproject.toml
diworsification-lab/data/: sample_portfolio.xlsx
diworsification-lab/docs/: data_format.md  methodology.md  references.md
diworsification-lab/examples/: run_analysis.py
diworsification-lab/examples/output/: summary.txt
diworsification-lab/src/diworsification/: __init__.py  backtest.py  data.py  make_sample_data.py  metrics.py  stress.py
diworsification-lab/tests/: test_diworsification.py
dsf/: README.md  demo.py  pyproject.toml
dsf/src/equilibrium/: model.py
dsf/src/frontier/: estimator.py
dsf/src/merton/: consistency.py
dsf/src/utils/: plots.py  synthetic.py
dsf/tests/: test_all.py
